@@ -1,3 +1,4 @@
+* New product types: Goods, Assets and Service
 * Category is no more required on product
 
 Version 2.2.0 - 2011-10-24
